--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^3.2.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^10.0.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -20,7 +21,7 @@
     "mongoose": "^5.7.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^3.3.0",
-    "nodemon": "^1.19.3",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
